fixed issue where you could drag the mouse offscreen and break the layout

--- a/stylesheets/_structure.scaffolding.scss
+++ b/stylesheets/_structure.scaffolding.scss
@@ -31,7 +31,7 @@ body {
   display: table;
   height: 100%;
   margin: 0;
-  overflow: visible;
+  overflow: hidden;
   position: relative;
   width: 100%;
 }
